--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,11 +2,11 @@
   .contenedor {
     top: 82px;
     left: 160px !important;
-    width: 1029px;
+    width: 919px;
     height: 769px;
   }
   .border-tel{
-    margin-left: 88% !important;}
+    margin-left: 85% !important;}
 }
 
 @media (min-width: 1370px) {
@@ -170,7 +170,7 @@
 .contenedor {
   top: 82px;
   left: 267px;
-  width: 1029px;
+  width: 919px;
   height: 769px;
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 15px #00000027;
@@ -201,7 +201,7 @@
   opacity: 1;
 }
 .card {
-  width: 300px;
+  width: 262px;
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 8px #0000001a;
   border-radius: 25px;
@@ -445,8 +445,8 @@ margin-left: 10px;
   background-color: #57BBFF;
   padding: 3px;
   width: 150px;
-    margin-left: 82%;
-  position: absolute;
+    margin-left: 77%;
+  position: fixed;
   text-align-last: center;
   display: flex;
   margin-top: 19px;
@@ -458,7 +458,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow-x: hidden;
+  
 }
 .flecha-left{
   display: inline-block;
